Use the correct option for modules